--- a/downloadvideo/pom.xml
+++ b/downloadvideo/pom.xml
@@ -38,11 +38,6 @@
             <artifactId>minio</artifactId>
             <version>6.0.11</version>
         </dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
 
 		 <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,6 +51,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.1.0</version>
+				<configuration>
+				<from>
+					<image>openjdk</image>
+				</from>
+				<to>
+					<image>downloadvideo</image>
+				</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
