--- a/uploadvideo/pom.xml
+++ b/uploadvideo/pom.xml
@@ -64,6 +64,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.1.0</version>
+				<configuration>
+				<from>
+					<image>openjdk</image>
+				</from>
+				<to>
+					<image>uploadvideo</image>
+				</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
