--- a/uploadvideo/src/main/resources/application.properties
+++ b/uploadvideo/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10GB
+
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.host=host.docker.internal
+spring.rabbitmq.port=5672
